change way of adding advertisements, photos saving